<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ngưng Tịnh</string>

    <string name="btn_ok">確定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_clean">清空</string>
    <string name="btn_print">列印</string>
    <string name="tt_hangmuc">項目</string>
    <string name="tt_mvl">料號</string>
    <string name="tt_ten">物料名稱</string>
    <string name="tt_quycach">規格</string>
    <string name="tt_kho">倉庫</string>
    <string name="tt_solo">批號</string>
    <string name="tt_soluong">數量</string>

    /*Menu Button*/
    <string name="btn_nt01">掃描入庫 </string>
    <string name="btn_nt02">掃描出庫</string>
    <string name="btn_nt03">查詢</string>
    <string name="btn_nt04">拋轉</string>
    <string name="btn_nt05">設立基本資料</string>
    <string name="btn_nt06">查詢明細資料</string>
    <string name="Change_Data">同步資料</string>


    /* activity_main */
    <string name="main_id">帳號：</string>
    <string name="main_pwd">密碼：</string>
    <string name="main_ok">確定</string>
    <string name="main_cancel">取消</string>
    <string name="main_E01">請輸入帳號</string>
    <string name="main_E02">帳號密碼錯誤</string>
    <string name="main_E03">連線錯誤</string>
    <string name="main_language">語言</string>
    <string name="main_stay_logged">保持登入</string>

    /*check version*/
    <string name="ver_curr_version">當前版本: </string>
    <string name="ver_new_version">新版本：</string>
    <string name="ver_install">請安裝!</string>
    <string name="ver_soft_update">軟件更新</string>
    <string name="ver_update">更新</string>
    <string name="ver_downloading">正在下載</string>
    <string name="ver_please_wait">請稍後...</string>

    <string name="E01">帳號密碼錯誤</string>
    <string name="E02">連線錯誤</string>
    <string name="E10">請輸入帳號</string>

    /*nt_dialog1*/
    <string name="tt_diaxuong">廠別</string>
    <string name="tt_diakhu">儲位</string>
    <string name="btn_dconf">確認</string>

    /*nt_setup_data*/
    <string name="nt_sxuong">廠別</string>
    <string name="nt_skhu">儲位</string>
    <string name="nt_scon">子位置</string>
    <string name="nt_ssl">數量</string>
    <string name="btn_sinsert">新增</string>
    <string name="nt_danhsach">清單</string>

    //scandata
    <string name="sc_tt">電池批號資訊</string>
    <string name="sc_doncong">工單編號</string>
    <string name="sc_quycach">規格</string>
    <string name="sc_soluong">數量</string>
    <string name="sc_tuan">APS排程週別</string>
    <string name="sc_datesx">生產日期</string>
    <string name="sc_ngaysac">進靜置區日期</string>
    <string name="btsc_insert">存放</string>
    <string name="btsc_delete">清除</string>

    <string name="tt_stt">序號</string>
    <string name="btn_search">查詢</string>
    <string name="M05">確定拋轉資料?</string>

    <string name="nt_post">出靜置區庫?</string>
    <string name="nt_num">數量</string>
    //mausac
    <string name="sc_mausac">顏色</string>
    <string name="nt_daucuc">極點</string>

    //OpenScanner
    <string name="tv_info">物料資訊</string>
</resources>