<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9EDBB"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:padding="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:text="@string/nt_sxuong"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/st_plant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="7"
                android:gravity="left|center_vertical"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:text="@string/nt_skhu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/st_region"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="7"
                android:gravity="left|center_vertical"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:text="@string/nt_scon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/st_cpos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="7"
                android:gravity="left|center_vertical"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_Insert"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_type_nomal"
            android:text="@string/btn_sinsert"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nt_danhsach"
            android:textStyle="bold"
            android:theme="@style/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="STT"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Xưởng"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Khu"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Vị trí"
                android:textStyle="bold"
                android:theme="@style/title" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>