<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content View -->
    <LinearLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFDD0"
        android:orientation="vertical">

        <!-- Add your main content here -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tt_stt"
                android:textStyle="bold"
                android:theme="@style/title" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/nt_sxuong"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/nt_skhu"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/nt_scon"
                android:textStyle="bold"
                android:theme="@style/title" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/sc_mausac"
                android:textStyle="bold"
                android:theme="@style/title" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/nt_daucuc"
                android:textStyle="bold"
                android:theme="@style/title" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center"
                android:text="@string/tt_quycach"
                android:textStyle="bold"
                android:theme="@style/title" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/sc_ngaysac"
                android:textStyle="bold"
                android:theme="@style/title" />

            <!--
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/sc_quycach"
                android:textStyle="bold"
                android:theme="@style/title" />
                -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/sc_soluong"
                android:textStyle="bold"
                android:theme="@style/title" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#d5d29d">

        <!-- add thêm menu nếu cần thiết-->
        <!-- app:menu="@menu/nav_menu" -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rectangle_rounded_bottom"
                android:backgroundTint="@color/MidnightGreen"
                android:gravity="center"
                android:text="Nhập thông tin tra cứu "
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/sc_quycach"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/cbx_qc"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="left"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/nt_sxuong"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/cbx_x"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="left"
                            android:layout_weight="3"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/sc_mausac"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edt_mausac"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:inputType="textCapCharacters"
                            android:ems="10"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/nt_daucuc"
                            android:textSize="19sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edt_daucuc"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:inputType="textCapCharacters"
                            android:ems="10" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="Ngày vào ngưng tịnh"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_bdate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1.5"
                        android:gravity="center_vertical"
                        android:hint="Từ ngày"
                        app:drawableEndCompat="@android:drawable/ic_menu_search" />

                    <TextView
                        android:id="@+id/tv_edate"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1.5"
                        android:gravity="center_vertical"
                        android:hint="Đến ngày"
                        app:drawableEndCompat="@android:drawable/ic_menu_search" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/darker_gray"
                        android:layout_weight="0.1"/>

                    <Button
                        android:id="@+id/btn_Search"
                        android:layout_width="200dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:background="@drawable/button_type_nomal_midnight"
                        android:text="Tra cứu"
                        android:textColor="@color/white" />
                </LinearLayout>

            </ScrollView>






        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>