<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#A9EDBB"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:text="@string/tt_diaxuong"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/cbx_dxuong"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:hint="YYYY/MM/DD"
                android:paddingLeft="10dp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:text="@string/tt_diakhu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cbx_dkhu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="left|center_vertical"
                android:hint="YYYY/MM/DD"
                android:paddingLeft="10dp"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_dconf"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_type_nomal"
            android:text="@string/btn_dconf"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>